// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for state: error, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #3A0F0F !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: error, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #FFE2E4 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #04294E !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #D3E1FF !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #04294E !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #D3E1FF !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #04294E !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #D3E1FF !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #04294E !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #D3E1FF !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #04294E !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #D3E1FF !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #04294E !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #D3E1FF !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #04294E !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #D3E1FF !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #04294E !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #D3E1FF !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: success, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #003320 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: success, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #E4FFEC !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: warning, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #362B0A !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #FBFCFF;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #FBFCFF;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: warning, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  background: #FFF4D2 !important;
  border-radius: 4px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

.heading {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: #010205;
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: #010205;
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;
